--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "editor.rename.enablePreview": false,
-    "workbench.editor.enablePreview": false
+    "workbench.editor.enablePreview": true
 }
