--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: weather-app-service
-  namespace: weather-app
+  namespace: jenkins-namespace
 spec:
   type: LoadBalancer
   selector:
