--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-package-lock.json
+# package-lock.json
 
 #python script for parsing purposes
 weather.py
